# my-finance

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  test_ufj.py  test_ufj_csv_upload.py  test_ufj_driver.py
app/: app.json  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
app/src/app/: _layout.tsx
app/src/app/(auth)/: login.tsx
app/src/app/(tabs)/: _layout.tsx  history.tsx  index.tsx
app/src/app/auth/: callback.tsx
app/src/components/: CategoryPicker.tsx  DateField.tsx
app/src/types/: index.ts
app/supabase/migrations/: 20260503_create_expenses.sql
config/: log_conf.json  selenium_conf.py
docs/: budget-app-plan.md  nehan-integration-plan.md
finance-tracker/: .clasp.json  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json
finance-tracker/src/: discord.ts  form.ts  scratch.ts  vpass.ts
gmail-discord/: .clasp.json  package-lock.json  package.json
gmail-discord/scripts/: copy-appsscript.mjs
gmail-discord/src/: main.ts
nehan/: README.md  deploy.sh  pyproject.toml  template.yml
nehan/src/: config.py  lambda_function.py  requirements.txt
nehan/src/services/: discord_finance_report.py  try_resend.py
nehan/tests/: local_test.py
rakuten/: get_rakuten_mail.js
tax/amazon-prime-mastercard/: .clasp.json  README.md  package-lock.json  package.json  tsconfig.json
tax/amazon-prime-mastercard/src/: main.ts
ufj/: __init__.py  ufj_driver.py  ufj_sheets.py
