[tool.poetry]
name = "my-finance"
version = "0.1.0"
description = ""
authors = ["yusuke1225math2 <63696752+yusuke1225math2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
jupyter = "^1.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
